--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "jest-another-rpg",
+  "name": "rpg",
   "version": "1.0.0",
-  "description": "RPG",
-  "main": "index.js",
+  "description": "",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nichojohnson84/jest-another-rpg.git"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/nichojohnson84/jest-another-rpg/issues"
-  },
-  "homepage": "https://github.com/nichojohnson84/jest-another-rpg#readme",
-  "devDependencies": {
-    "jest": "^27.5.1"
+  "dependencies": {
+    "inquirer": "^7.0.3",
+    "jest": "^24.9.0"
   }
 }
